# cloudflarectl

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: lint.yml  main.yml  publish.yml
cloudctl/: __init__.py  __main__.py
cloudctl/cli/: __init__.py
cloudflare_cli/: __init__.py  __main__.py
cloudflare_cli/cli/commands/: user.py
cloudflarectl/cli/commands/: user.py
tests/: test_cloudflare_cli.py
